--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:WindowedApplication xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute"
+<mx:WindowedApplication
 	
-	initialize="initalizeHandler();"
-	
-	verticalScrollPolicy="off"
-	
+	xmlns:mx="http://www.adobe.com/2006/mxml" 
 	xmlns:vdom="vdom.*"
 	xmlns:modules="vdom.modules.*"
 	xmlns:controls="vdom.containers.*" 
@@ -13,7 +10,12 @@
 	xmlns:loginForm="vdom.components.loginForm.*" 
 	xmlns:main="vdom.components.main.*"
 	xmlns:analyse="vdom.components.analyse.*" 
-	xmlns:treeEditor="vdom.components.treeEditor.*"  
+	xmlns:treeEditor="vdom.components.treeEditor.*"
+	
+	preinitialize="preinitalizeHandler();"
+	
+	layout="absolute"
+	verticalScrollPolicy="off"
 	>
 	
 	<mx:Script source="includes/Vdom.as"/>
@@ -26,175 +28,54 @@
 	
 	<mx:ViewStack id="viewstack" width="100%" height="100%">
 	
-	<loginForm:LoginForm id="loginForm" 
-		authDataChanged="submitLogin(event)" submitBegin="lockStage()"/>
+		<loginForm:LoginForm id="loginForm" submitBegin="submitLogin(event)"/>
 	
-	<mx:Canvas id="main"  width="100%" height="100%">
-	<mx:ApplicationControlBar
-		top="0" left="0" right="0" height="80" 
-		fillColors="#000000" dock="true" cornerRadius="0">
-		<mx:Spacer x="10" y="10" width="100%"/>
-		<!--<mx:ComboBox id="selectTestLang"
-			width="140"
-			dataProvider="{languageList.Language}"
-			labelField="@label"
-				fillColors="[#ffffff, #ffffff]" fillAlphas="[1.0, 0.59]"
-				change="changeLanguageHandler(event);"/> -->
-		<mx:Spacer x="10" y="10" width="100%"/>
-		<mx:Button label="Logout" click="viewstack.selectedChild=loginForm"/>
-	</mx:ApplicationControlBar>
-	<controls:MainTabNavigator id="tabPanel"
-		top="90" left="10" right="10"
-		paddingBottom="10" paddingTop="10" paddingRight="10" paddingLeft="10" tabPaddingLeft="80"
- bottom="10">
-	 	<modules:ApplicationManagment />
-	 	<modules:Editor />
-		<!--
-		<mx:Canvas id="appManTab" label="{resourceManager.getString('Application','main_title')}" 
-			width="100%" height="100%" verticalScrollPolicy="off"
-			show="{placeCanvas.selectedChild=mainCanvas}">
+		<mx:Canvas id="main"  width="100%" height="100%">
+		
+			<mx:ApplicationControlBar
+				top="0" left="0" right="0" height="80" 
+				fillColors="#000000" dock="true" cornerRadius="0">
+				<mx:Spacer x="10" y="10" width="100%"/>
+				<!--<mx:ComboBox id="selectTestLang"
+					width="140"
+					dataProvider="{languageList.Language}"
+					labelField="@label"
+					fillColors="[#ffffff, #ffffff]" fillAlphas="[1.0, 0.59]"
+					change="changeLanguageHandler(event);"/> -->
+				<mx:Spacer x="10" y="10" width="100%"/>
+				<mx:Button label="Logout" click="viewstack.selectedChild=loginForm"/>
+			</mx:ApplicationControlBar>
 			
-			<controls:ControlPanel 
-				top="0" bottom="0" width="100%" horizontalAlign="left" horizontalGap="5" verticalAlign="middle">
+			<controls:MainTabNavigator id="tabPanel"
+				top="90" left="10" right="10" bottom="10"
+				paddingBottom="10" paddingTop="10" paddingRight="10" paddingLeft="10" tabPaddingLeft="80">
+		
+	 			<modules:ApplicationManagment label="{resourceManager.getString('Application','main_title')}" />
+	 	
+	 			<modules:Editor label="{resourceManager.getString('Application','editor_title')}" 
+	 				width="100%" height="100%" />
+		
+				<mx:Canvas id="multilinTab"
+					label="{resourceManager.getString('Application','mling_title')}"
+					width="100%" height="100%" />
 				
-				<controls:ActionButton styleName="newsButton"
-					label="{resourceManager.getString('Application','main_new')}"
-					labelPlacement="bottom"/>
+				<mx:Canvas id="portalManTab"
+					label="{resourceManager.getString('Application','portal_title')}"
+					width="100%" height="100%" />
 				
-				<controls:ActionButton styleName="newsButton"
-					label="{resourceManager.getString('Application','main_steps')}"
-					labelPlacement="bottom"/>
-
-				<controls:ActionPanel panelName="{resourceManager.getString('Application','main_search')}"
-					width="250" height="86" dropShadowEnabled="false">
+				<mx:Canvas id="publishTab"
+					label="{resourceManager.getString('Application','publish_title')}"
+					width="100%" height="100%" />
 				
-					<mx:HBox width="100%">
-						<mx:Button label="Find" height="50"/>
-						<mx:VBox width="100%" horizontalAlign="right">
-							<mx:TextInput height="20"/>
-							<mx:ComboBox height="20"></mx:ComboBox>
-							<mx:Button label="Go" height="20"/>
-						</mx:VBox>
-					</mx:HBox>
+				<mx:Canvas id="safeguardTab"
+					label="{resourceManager.getString('Application','safe_title')}"
+					width="100%" height="100%" />
 					
-				</controls:ActionPanel>
-				
-				<controls:ApplicationPanel id="listApplicationContainer"
-					dropShadowEnabled="false"
-					panelName="{resourceManager.getString('Application','main_applist')}" 
-					dataProvider="{dataManager.listApplication}"
-					applicationChanged="applicationChangedHandler(event)"
-					height="86"/>
-				
-				<controls:ActionPanel
+				<mx:Canvas id="vdomTab"
+					label="{resourceManager.getString('Application','vdom_title')}"
+					width="100%" height="100%" />
 					
-					panelName="{resourceManager.getString('Application','main_appinfo')}"
-					visible="true" height="86" dropShadowEnabled="false"/>
-				
-			</controls:ControlPanel>
+			</controls:MainTabNavigator>
 		</mx:Canvas>
-		
-		<mx:Canvas id="editorTab"
-			label="{resourceManager.getString('Application','edit_title')}" width="100%" height="100%"  
-			show="{placeCanvas.selectedChild=editorCanv}">
-			<controls:ControlPanel 
-				top="0" bottom="0" width="100%" horizontalAlign="left" horizontalGap="5" verticalAlign="middle">
-				
-				<controls:ActionButton styleName="editionButton"
-					label="{resourceManager.getString('Application','edit_edition')}"
-					labelPlacement="bottom"
-					click="{placeCanvas.selectedChild=editorCanv}"/>
-				
-				<controls:ActionButton styleName="scriptButton" 
-					label="{resourceManager.getString('Application','edit_script')}" 
-					labelPlacement="bottom"
-					click="{placeCanvas.selectedChild=scriptCanv}"/>
-				
-				<controls:ActionButton styleName="previewButton" 
-					label="{resourceManager.getString('Application','edit_preview')}"
-					labelPlacement="bottom"
-					switched="false"
-					click="{
-						navigateToURL(
-							new URLRequest('http://vdom:81/'+application.publicData['topLevelObjectId']+'.vdom')
-						)
-					}"/>
-				
-				<controls:ActionButton styleName="treeButton"
-					labelPlacement="bottom"
-					label="{resourceManager.getString('Application','edit_tree')}"
-					click="{placeCanvas.selectedChild=treeCanv}"/>
-					
-				
-				<controls:ActionButton styleName="analyseButton"
-					label="{resourceManager.getString('Application','edit_analyse')}"
-					labelPlacement="bottom"
-					click="{placeCanvas.selectedChild=analyseCanv}"/>
-				
-				<controls:ActionButton styleName="statisticsButton" 
-					label="{resourceManager.getString('Application','edit_statistics')}"
-					labelPlacement="bottom"/>
-				
-				<controls:ActionButton styleName="eventsButton"
-					label="{resourceManager.getString('Application','edit_events')}"
-					labelPlacement="bottom"/>
-					
-			</controls:ControlPanel>
-		</mx:Canvas>
-		-->
-		<mx:Canvas id="multilinTab"
-			label="{resourceManager.getString('Application','mling_title')}" width="100%" height="100%"  
-			show="{placeCanvas.selectedChild=multilinCanv}">
-		</mx:Canvas>
-		<mx:Canvas id="portalManTab"
-			label="{resourceManager.getString('Application','portal_title')}" width="100%" height="100%" 
-			show="{placeCanvas.selectedChild=portalManCanv}">
-		</mx:Canvas>
-		<mx:Canvas id="publishTab"
-			label="{resourceManager.getString('Application','publish_title')}" width="100%" height="100%" 
-			show="{placeCanvas.selectedChild=publishCanv}">
-		</mx:Canvas>
-		<mx:Canvas id="safeguardTab"
-			label="{resourceManager.getString('Application','safe_title')}" width="100%" height="100%"  
-			show="{placeCanvas.selectedChild=safeguardCanv}">
-		</mx:Canvas>
-		<mx:Canvas id="vdomTab"
-			label="{resourceManager.getString('Application','vdom_title')}" width="100%" height="100%"  
-			show="{placeCanvas.selectedChild=vdomCanv}">
-		</mx:Canvas>
-	</controls:MainTabNavigator>
-	<!-- <mx:ViewStack id="placeCanvas"
-		borderStyle="none" left="10" right="10" top="240" bottom="10">
-	
-		<main:Main id="mainCanvas"
-			width="100%" height="100%" styleName="mainCanvas"/>
-		
-		<editor:Editor id="editorCanv" width="100%" height="100%"/>
-		
-		<scriptEditor:ScriptEditor id="scriptCanv" 
-			width="100%" height="100%"/>
-		
-		<treeEditor:TreeEditor id="treeCanv"
-			width="100%" height="100%" />
-		
-		<analyse:Analyse id="analyseCanv" width="100%" height="100%"/>
-		
-		<mx:Canvas id="multilinCanv" width="100%" height="100%">
-			<mx:Label horizontalCenter="0" verticalCenter="0"/>
-		</mx:Canvas>
-		<mx:Canvas id="portalManCanv" width="100%" height="100%">
-			<mx:Label horizontalCenter="0" verticalCenter="0"/>
-		</mx:Canvas>
-		<mx:Canvas id="publishCanv" width="100%" height="100%">
-			<mx:Label horizontalCenter="0" verticalCenter="0"/>
-		</mx:Canvas>
-		<mx:Canvas id="safeguardCanv" width="100%" height="100%">
-			<mx:Label horizontalCenter="0" verticalCenter="0"/>
-		</mx:Canvas>
-		<mx:Canvas id="vdomCanv" width="100%" height="100%">
-			<mx:Label horizontalCenter="0" verticalCenter="0"/>
-		</mx:Canvas>
-	</mx:ViewStack> -->
-	</mx:Canvas>
 	</mx:ViewStack>
 </mx:WindowedApplication>
