--- a/IDE/Vdom/vdom/components/analyse/Analyse.mxml
+++ b/IDE/Vdom/vdom/components/analyse/Analyse.mxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" backgroundColor="#ffffff" creationComplete="creationCompleteHendler()" xmlns:objectsPanel="vdom.components.objectsPanel.*">
+<mx:Canvas 
+	
+	xmlns:mx="http://www.adobe.com/2006/mxml"  
+	xmlns:objectsPanel="vdom.components.objectsPanel.*"
+	
+	backgroundColor="#ffffff">
 	
 	<mx:Script>
 		<![CDATA[
@@ -11,18 +16,16 @@
 	//		[Bindable]
 			private var publicData:Object;
 			
-			private function creationCompleteHendler():void
+			/* private function creationCompleteHendler():void
 			{
 				dataManager = DataManager.getInstance();
 				publicData = Application.application.publicData; 
 		//		trace('publicData: \n'+ publicData)
 				
-			}
+			} */
 		]]>
 	</mx:Script>
 	
 	<mx:Button id="test" x="151" y="101" label="Button" />	
-	<objectsPanel:ObjectsPanel x="262" y="78" dataProvider="{dataManager.topLevelObjects}">
-		
-	</objectsPanel:ObjectsPanel>
+	
 </mx:Canvas>
