--- a/IDE/Vdom/vdom/containers/ApplicationPanel.mxml
+++ b/IDE/Vdom/vdom/containers/ApplicationPanel.mxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ActionPanel xmlns="vdom.containers.*" xmlns:mx="http://www.adobe.com/2006/mxml">
+<ActionPanel
+	
+	xmlns:mx="http://www.adobe.com/2006/mxml"
+	xmlns="vdom.containers.*">
+	
 	<mx:Metadata>
 		[Event(name="applicationChanged", type="mx.events.ListEvent")]
 	</mx:Metadata>
@@ -8,8 +12,19 @@
 			import mx.events.ListEvent;
 			import mx.controls.TileList;
 			
-			[Bindable]
-			public var dataProvider:XMLList;
+			private var _dataProvider:XMLList;
+			
+			public function set dataProvider(listApplication:XMLList):void {
+				
+				if(!listApplication || listApplication == _dataProvider)
+					return;
+				
+				_applicationTitleList.dataProvider = _dataProvider = listApplication;
+				_applicationTitleList.selectedIndex = 0;
+				
+				var evt:ListEvent = new ListEvent('applicationChanged');
+				dispatchEvent(evt);
+			}
 			
 			public function get applicationID():String {
 				
@@ -31,7 +46,7 @@
 	</mx:Script>
 	<mx:TileList id="_applicationTitleList" 
 		selectedIndex="0" change="changeListEvent()"
-		dataProvider="{dataProvider}" verticalScrollPolicy="auto" paddingRight="15" paddingLeft="5"
+		verticalScrollPolicy="auto" paddingRight="15" paddingLeft="5"
 		itemRenderer="vdom.containers.Thumbnail" rowCount="1" direction="horizontal" columnCount="4"
 		backgroundColor="#808080"/>	
 </ActionPanel>
