--- a/IDE/Vdom/vdom/modules/ApplicationManagment.mxml
+++ b/IDE/Vdom/vdom/modules/ApplicationManagment.mxml
@@ -4,58 +4,54 @@
 	xmlns:controls="vdom.containers.*"
 	xmlns:main="vdom.components.main.*"
 	
-	initialize="initalizeHandler();"
+	preinitialize="preinitializeHandler();"
+	creationComplete="creationCompleteHandler();"
 	show="showHandler();"
 	hide="hideHandler();"
 	
-	width="100%" height="100%">
+	width="100%" height="100%" verticalGap="2">
 	
 	<mx:Script source="includes/applicationManagment.as" />
-	
-	<mx:Canvas id="appManTab" 
-			label="{resourceManager.getString('Application','main_title')}" 
-			width="100%" height="120" 
-			verticalScrollPolicy="off">
 			
-			<controls:ControlPanel 
-				top="0" width="100%" horizontalAlign="left" horizontalGap="5" verticalAlign="middle" height="120">
-				
-				<controls:ActionButton styleName="newsButton"
-					label="{resourceManager.getString('Application','main_new')}"
-					labelPlacement="bottom"/>
-				
-				<controls:ActionButton styleName="newsButton"
-					label="{resourceManager.getString('Application','main_steps')}"
-					labelPlacement="bottom"/>
+	<controls:ControlPanel 
+		width="100%" height="90"
+		horizontalAlign="left" verticalAlign="middle"
+		horizontalGap="5">
+		
+		<controls:ActionButton styleName="newsButton"
+			label="{resourceManager.getString('Application','main_new')}"
+			labelPlacement="bottom"/>
+		
+		<controls:ActionButton styleName="newsButton"
+			label="{resourceManager.getString('Application','main_steps')}"
+			labelPlacement="bottom"/>
 
-				<controls:ActionPanel panelName="{resourceManager.getString('Application','main_search')}"
-					width="250" height="86" dropShadowEnabled="false">
-				
-					<mx:HBox width="100%">
-						<mx:Button label="Find" height="50"/>
-						<mx:VBox width="100%" horizontalAlign="right">
-							<mx:TextInput height="20"/>
-							<mx:ComboBox height="20"></mx:ComboBox>
-							<mx:Button label="Go" height="20"/>
-						</mx:VBox>
-					</mx:HBox>
-					
-				</controls:ActionPanel>
-				
-				<controls:ApplicationPanel id="listApplicationContainer"
-					dropShadowEnabled="false"
-					panelName="{resourceManager.getString('Application','main_applist')}" 
-					dataProvider="{dataManager.listApplication}"
-					applicationChanged="applicationChangedHandler(event)"
-					height="86"/>
-				
-				<controls:ActionPanel
-					
-					panelName="{resourceManager.getString('Application','main_appinfo')}"
-					visible="true" height="86" dropShadowEnabled="false"/>
-				
-			</controls:ControlPanel>
-		</mx:Canvas>
-		<main:Main id="mainCanvas"
-			width="100%" height="100%" styleName="mainCanvas"/>
+		<controls:ActionPanel panelName="{resourceManager.getString('Application','main_search')}"
+			width="250" height="86" dropShadowEnabled="false">
+		
+			<mx:HBox width="100%">
+				<mx:Button label="Find" height="50"/>
+				<mx:VBox width="100%" horizontalAlign="right">
+					<mx:TextInput height="20"/>
+					<mx:ComboBox height="20"></mx:ComboBox>
+					<mx:Button label="Go" height="20"/>
+				</mx:VBox>
+			</mx:HBox>
+			
+		</controls:ActionPanel>
+		
+		<controls:ApplicationPanel id="listApplicationContainer"
+			dropShadowEnabled="false"
+			panelName="{resourceManager.getString('Application','main_applist')}" 
+			dataProvider="{dataManager.listApplication}"
+			applicationChanged="applicationChangedHandler(event)"
+			height="86" />
+		
+		<controls:ActionPanel
+			panelName="{resourceManager.getString('Application','main_appinfo')}"
+			visible="true" height="86" dropShadowEnabled="false"/>
+		
+	</controls:ControlPanel>
+	
+	<main:Main id="mainCanvas" styleName="mainCanvas" width="100%" height="100%"  />
 </mx:VBox>
