corrected construction simple  tree
git-svn-id: http://svn.vdombox.ru/flextools/trunk@1184 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -313,6 +313,8 @@
 				setPosition(name);
 			}
 			depth--;
+			
+			massTreeObj[inName].correctPosition();
 		}
 		
 		function  distension():int
