--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -12,8 +12,8 @@
 	<![CDATA[
 		import mx.containers.Canvas;
 		import vdom.components.treeEditor.colorMenu02.ColorMenu2;
-		import vdom.Languages;
-		import vdom.components.editor.containers.AttributesPanel;
+		//import vdom.Languages;
+		import vdom.components.edit.containers.AttributesPanel;
 		import vdom.events.DataManagerEvent;
 		import vdom.managers.FileManager;
 		import mx.controls.Alert;
@@ -47,10 +47,10 @@
 	private var blDrawLine:Boolean = false;
 	private var vctTest:Vector = new Vector();
 	private var curLine:Object = new Object();
-	private var publicData:Object;
+//	private var publicData:Object;
 	private var dataManager:DataManager  = DataManager.getInstance();
 	private var script:TreeEditorScript  = new TreeEditorScript();
-	private var languages:Languages;
+	//private var languages:Languages;
 	
 
 /******* 
@@ -59,7 +59,7 @@
  * 			to Do
  *		Линии красиво 
  * 	//	Картинка менялась
- * 		Выстраивание дерева
+ * 	//	Выстраивание дерева
  * 	//	Перенос елемента влево и вверх
  * 		
  * 
@@ -79,13 +79,10 @@
 	
 	private function creationCompleteHandler():void
 	{
-		if(!main) main = new Canvas();
-	
-		if(!btLine)btLine = new DeleteLineButton();
-	
-		languages = Languages.getInstance();
-		publicData = Application.application.publicData;
-		addEventListener(MouseEvent.CLICK, mouseClickHandler);
+		
+		//languages = Languages.getInstance();
+	///	publicData = Application.application.publicData;
+		
 	}
 	
 	private function hideHendler():void
@@ -122,7 +119,10 @@
 	
 	private function showHnadler():void
 	{
-		
+		if(!main) main = new Canvas();
+	
+		if(!btLine)btLine = new DeleteLineButton();
+		addEventListener(MouseEvent.CLICK, mouseClickHandler);
 		/******  	set Listeners  ******/
 		
 		colmen2.addEventListener(TreeEditorEvent.HIDE_LINES, hideLines);
@@ -150,9 +150,9 @@
 	private function  getApplicationStructure(dtManEvt:DataManagerEvent):void
 	{
 		xml1 = XML(dtManEvt.result);
-		massTreeElements = script.createTreeArr(xml1,dataManager.topLevelObjects);
+		massTreeElements = script.createTreeArr(xml1,dataManager.listPages);
 		createTree();
-		curTree = massTreeElements[publicData.topLevelObjectId];
+		curTree = massTreeElements[dataManager.currentPageId];
 		drawLines();
 	}
 	
@@ -165,7 +165,7 @@
 			if (massTreeElements[obID].resourceID!='') 
 			{
 				var resMan:FileManager = FileManager.getInstance();
-				resMan.loadResource(publicData.applicationId, massTreeElements[obID].resourceID, this);
+				resMan.loadResource(dataManager.currentApplicationId, massTreeElements[obID].resourceID, this);
 			}
 			massTreeElements[obID].addEventListener(TreeEditorEvent.REDRAW , treeElementLinesReDrawHandler);
 			massTreeElements[obID].addEventListener(TreeEditorEvent.START_DRAW_LINE , startDrawLine);
@@ -461,7 +461,7 @@
 		addEventListener(MouseEvent.MOUSE_MOVE, mouseMoveHandler);
 		
 		curTree = evt.currentTarget;
-		publicData.topLevelObjectId = curTree.ID;
+		dataManager.changeCurrentPage( curTree.ID);
 	}
 	private function treeElementMousUpHandler(msEvt:MouseEvent):void
 	{
@@ -502,7 +502,7 @@
 	
 	private function mouseMoveHandler(msEvt:MouseEvent):void
 	{
-		redrawLines(publicData.topLevelObjectId);
+		redrawLines(dataManager.currentPage);
 	}
 	/**
 	*
