git-svn-id: http://svn.vdombox.ru/flextools/trunk@1192 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -135,7 +135,7 @@
 		
 			
 		arrAppl = [];
-		var types:XML = dataManager.getTopLevelTypes();
+		var types:XMLList = dataManager.getTopLevelTypes();
 		
 		for each(var lavel:XML in types.Type )
 		{
@@ -614,7 +614,7 @@
 	
 	private function soapAddTreeElement():void
 	{
-		var types:XML = dataManager.getTopLevelTypes();
+		var types:XMLList = dataManager.getTopLevelTypes();
 	
 		dataManager.createObject(selectedAppl.data);
 		dataManager.addEventListener(DataManagerEvent.OBJECTS_CREATED, createObject);
